--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "bytes": "^3.0.0",
+    "compression": "^1.7.2",
     "express": "^4.16.2",
     "mongoose": "^4.13.5",
     "multer": "^1.3.0",
